# restorio-fullstack

./: .bunfig.toml  .dockerignore  .env.example  .eslintignore  .eslintrc.json  .eslintrc.react.json  .gitignore  .lintstagedrc  .npmrc  .prettierignore  .prettierrc  .prettierrc.json  AGENTS.md  BUN-SETUP.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PLAN.MD  PLAN.md  README.md  REMAINING_IMPROVEMENTS.md  bunfig.toml  coverage-summary.md  docker-compose.dev.yml  docker-compose.yml  menu-creator-module.patch  package-lock.json  package.json  temp.md  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts  vitest.monorepo.ts  wrangler.jsonc
app/api/: Dockerfile  Makefile  README.md  alembic.ini  coverage-summary.md  diff.patch  main.py  pyproject.toml  pyrightconfig.json  reset_migrations.sh
app/api/alembic/: README.md  env.py  fixture.py  reset_migrations.py
app/api/alembic/versions/: 0a3b1e6d9c52_add_user_display_name.py  20260205_224926_initial_schema.py  20260206_163023_add_activation_links.py  20260206_163123_add_activation_used_at.py  20260206_163323_add_activation_last_resend_at.py  20260211_add_venues_and_floor_canvases.py  20260212_235848_new_fields.py  20260215_163023_add_activation_links.py  20260217_121500_add_tenant_and_owner_relationships.py  20260217_130000_fix_owner_id_location.py  20260217_140000_move_account_type_to_tenant_roles.py  20260217_add_tenant_p24_fields.py  20260217_merge_heads.py  20260217_move_active_layout_to_tenants_and_remove_venues.py  20260218_031029_merge_p24_fields_and_auth_branches.py  20260219_005941_remove_user_tenants_table.py  20260220_000227_order_status_tolowercase.py  20260222_223217_add_transactions_table.py  20260225_210000_add_force_password_change_to_users.py  20260226_231500_set_force_password_change_default_false.py  20260302_add_tenant_profiles.py  20260303_remove_restaurant_tables.py  20260304_rename_restaurant_profiles_to_tenant_profiles.py  20260307_113635_merge_heads_after_tenant_profiles_and_.py  20260310_190000_add_tenant_public_id.py  20260315_105020_split_tenant_profile_street_fields.py  20260316_120000_add_archived_orders_table.py  20260319_make_activation_link_tenant_id_nullable.py  20260330_004745_add_name_and_surname_to_users.py  20260330_010444_add_order_table_ref_and_waiter_.py  20260402_120000_transactions_p24_order_id_bigint.py  20260402_merge_heads_orders_branch_and_archived_orders.py  20260403_add_order_notes_field.py  20260408_120000_add_order_details_and_drop_order_items.py  20260409_120000_add_tenant_mobile_configs.py  20260409_180000_merge_heads_mobile_configs_and_transactions.py  (+9 more)
app/api/docs/: dependencies_flow.md  dto_layer_guide.md  order_lifecycle.md  postgres_schema.md
app/api/routes/: __init__.py
app/api/services/: archive_service.py  auth_service.py  canvas_versioning.py  email_service.py  external_client_service.py  floor_canvas_service.py  kitchen_config_service.py  mobile_payment_sync.py  mongo_menu_service.py  order_service.py  payment_service.py  refund_service.py  table_session_service.py  tenant_logo_storage_service.py  tenant_menu_image_storage_service.py  tenant_mobile_config_service.py  tenant_mobile_favicon_storage_service.py  tenant_profile_service.py  tenant_service.py  user_service.py  ws_manager.py
app/api/tests/: conftest.py
apps/api/: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
apps/api/alembic/: README.md  env.py
apps/api/app/: main.py
apps/api/core/: config.py  database.py  db.py  dependencies.py  exceptions.py  logging.py  middleware.py  responses.py  router.py  schemas.py  security.py
apps/api/docs/: architecture_alignment.md  postgres_schema.md
e2e/: README.md  (+2 more)
(+763 files in other folders)
