[project]
name = "restorio-api"
version = "0.1.0"
description = "Restorio Platform API - Multi-tenant Restaurant Management"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "motor==3.6.0",
    "asyncpg==0.30.0",
    "redis==5.0.1",
    "stripe==7.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

